mocks and swagger
